gobmkida/c1/gtp_final_status
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_final_status/src/interface/play_gtp.c:3058:34: error: use of undeclared identifier 'dword_495008'
while ( final_status[i[0]][j] != dword_495008[v3] ) 
                                 ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_final_status/src/interface/play_gtp.c:3063:21: error: use of undeclared identifier 'qword_495040'
v2 = ( const char *)qword_495040[v3]; 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_final_status/src/obj/2/play_gtp.o] Error 1
